--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport", content="width=device-width, initial-scale=1.0">
-        <title>Flappy Bird</title>
+        <title>APS Kaluchak Flappy Bird</title>
         <link rel="stylesheet" href="flappybird.css">
         <script src="flappybird.js"></script>
     </head>
     <body>
         <canvas id="board"></canvas>
+
+        <h1>Flappy Bird Game </h1>
+        <h2>Design and developed by students of APS Kaluchak</h2>
     </body>
 </html>
